--- a/catppuccin_options_tmux.conf
+++ b/catppuccin_options_tmux.conf
@@ -3,7 +3,7 @@
 # This is executed separately to the main configuration
 # so that options are set before parsing the rest of the config.
 
-set -ogq @catppuccin_flavor "mocha"
+set -ogq @catppuccin_flavor "black"
 
 set -ogq @catppuccin_status_background "default"
 
