Update color theme

--- a/themes/catppuccin_black_tmux.conf
+++ b/themes/catppuccin_black_tmux.conf
@@ -8,7 +8,7 @@ set -ogq @thm_fg "#d4d4d4"
 set -ogq @thm_rosewater "#ffffff"  # Selection Foreground
 set -ogq @thm_flamingo "#264F78"  # Selection Background
 set -ogq @thm_pink "#d670d6"       # Magenta
-set -ogq @thm_mauve "#bc3fbc"      # Bright Magenta
+set -ogq @thm_mauve "#e68a3f"      # Bright Magenta
 set -ogq @thm_red "#ff5555"        # Red
 set -ogq @thm_maroon "#ff3333"     # Bright Red
 set -ogq @thm_peach "#fab387"      # Not defined, kept similar
@@ -27,8 +27,8 @@ set -ogq @thm_overlay_2 "#9399b2"  # Adjusted from Catppuccin
 set -ogq @thm_overlay_1 "#7f849c"  # Adjusted
 set -ogq @thm_overlay_0 "#6c7086"  # Adjusted
 set -ogq @thm_surface_2 "#585b70"  # Adjusted
-set -ogq @thm_surface_1 "#44475a"  # Inactive border
-set -ogq @thm_surface_0 "#313244"  # Adjusted
-set -ogq @thm_mantle "#181825"     # Adjusted
+set -ogq @thm_surface_1 "#1f66cc"  # Inactive border
+set -ogq @thm_surface_0 "#252525"  # Adjusted
+set -ogq @thm_mantle "#000000"     # Adjusted
 set -ogq @thm_crust "#11111b"      # Adjusted
 
